Misc UI 6 - Better approach to Time Conductor overflow; - Fixed main page left/right clipping issue; - Fixed table header bg styling that had issues in legacy tables; - Fixed Time Conductor datetime picker clipping issue; - New .c-message--simple for use in Summary Widgets; - Better styling for header in empty Tabs view; - Fixed Chrome 73 scrolling bug in Summary Widgets; - Fixed problem in Inspector <li> elements from new wait spinner; - Fixed color of <a> tags in tables to be more visible; styling;

--- a/src/styles-new/_legacy.scss
+++ b/src/styles-new/_legacy.scss
@@ -461,7 +461,7 @@ body.mobile.phone {
     width: $ruleLabelW;
 }
 
-.t-message-widget-no-data {
+.js-summary-widget__message {
     display: none;
 }
 
@@ -508,7 +508,7 @@ body.mobile.phone {
         &.expanded-widget-rules {
             .widget-rules-wrapper {
                 min-height: 50px;
-                height: auto;
+                height: 100%; // Fix for Chrome 73 scrolling bug
                 opacity: 1;
                 pointer-events: inherit;
             }
@@ -520,7 +520,7 @@ body.mobile.phone {
             opacity: 0.3;
             pointer-events: none;
         }
-        .t-message-widget-no-data {
+        .js-summary-widget__message {
             display: flex;
         }
     }
